gcloud/api-sample-deploy-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: api-sample-svc
spec:
  ports:
  - port: 8880
    targetPort: 8080
    protocol: TCP
  selector:
    app: api-sample
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-sample-deploy
spec:
  replicas: 3
  selector:
    matchLabels:
      app: api-sample
  template:
    metadata:
      labels:
        app: api-sample
    spec:
      containers:
      - name: api-sample-cnt
        image: mehdizj2000/api-sample
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /actuator/health/readiness
            port: 8080
          initialDelaySeconds: 10
          timeoutSeconds: 2
          periodSeconds: 3
          failureThreshold: 1
        livenessProbe:
          httpGet:
            path: /actuator/health/liveness
            port: 8080
          initialDelaySeconds: 20
          timeoutSeconds: 2
          periodSeconds: 8
          failureThreshold: 1
