gcloud/deploy-api-simple.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-simple-svc
spec:
  ports:
  - port: 80
    targetPort: 8081
    protocol: TCP
    name: http
  selector:
    app: api-simple
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-simple-deploy
spec:
  replicas: 3
  selector:
    matchLabels:
      app: api-simple
  template:
    metadata:
      labels:
        app: api-simple
    spec:
      containers:
      - name: esp
        image: gcr.io/endpoints-release/endpoints-runtime:2
        args: [
          "--http_port=8081",
          "--backend=127.0.0.1:8080",
          "--service=api-simple.endpoints.potent-terminal-298905.cloud.goog",
          "--rollout_strategy=managed",
        ]
        ports:
          - containerPort: 8081
      - name: api-simple-cnt
        image: mehdizj2000/api-sample
        ports:
          - containerPort: 8080
