gcloud/simple-svc-api-sample.yml
apiVersion: v1
kind: Service
metadata:
  name: api-sample-svc
spec:
  ports:
  - port: 8880
    targetPort: 8081
    protocol: TCP
  selector:
    app: api-sample
  type: LoadBalancer
