gcloud/simple-ing-api-sample.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: api-sample-ing
  annotations:
    # If the class annotation is not specified it defaults to "gce".
    kubernetes.io/ingress.class: "gce"
spec:
  backend:
    serviceName: api-sample-svc
    servicePort: 8880
